deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arch-course-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: arch-course
  template:
    metadata:
      labels:
        app: arch-course
    spec:
      containers:
      - name: arch-course
        image: kirillkogtev/arch_course:v2
        ports:
          - name: web
            containerPort: 8000
