service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arch-course-service
spec:
  selector:
    app: arch-course
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: NodePort
