ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arch-course-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: arch.course
    http:
      paths:
      - path: /myapp($|/)(.*)
        pathType: Prefix
        backend:
          service:
            name: arch-course-service
            port:
              number: 8000
